# orderbook-engine

./: CHANGELOG.md  CMakeLists.txt  NOTICE.md  README.md
analytics/include/: ImbalanceAnalyzer.h  ImpactAnalyzer.h  SpreadAnalyzer.h  StylizedFacts.h
bench/: bench_latency.cpp  bench_orderbook_compare.cpp  bench_throughput.cpp
core/include/: ArenaAllocator.h  ArrayOrderBook.h  MatchingEngine.h  Order.h  OrderBook.h  PriceLevel.h
core/tests/: test_invariants.cpp
docs/: visualizations.html
import-progress/: step-002.txt  step-003.txt  step-004.txt  step-005.txt  step-006.txt  step-007.txt  step-008.txt  step-009.txt  step-010.txt  step-011.txt  step-012.txt  step-013.txt  step-014.txt  step-015.txt  step-016.txt  step-017.txt  step-018.txt  step-019.txt  step-020.txt  step-021.txt  step-022.txt  step-023.txt  step-024.txt  step-025.txt  step-026.txt  step-027.txt  step-028.txt  step-029.txt  step-030.txt  step-031.txt  step-032.txt  step-033.txt  step-034.txt  step-035.txt  step-036.txt  step-037.txt  step-038.txt  step-039.txt  step-040.txt  step-041.txt  (+59 more)
md/include/: FeedMessage.h  FeedPublisher.h  SPSCRingBuffer.h
net/include/: OrderEntryProtocol.h  OrderGateway.h
net/tests/: test_gateway.cpp
sim/include/: HawkesProcess.h  Simulator.h  ZIAgent.h
src/: main.cpp
